added jwt authentication to endpoints
